# pith

./: .env.example  .gitignore  .gitmodules  BRAND.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README-tauri.md  README.md  pith-export.csv  pith-export.docx  pith.config.example.json  pyproject.toml
.claude/: settings.json
.claude/agents/: accessibility-specialist.md  ai-programmer.md  architecture-director.md  auth-specialist.md  backend-developer.md  backend-lead.md  code-reviewer.md  content-lead.md  content-writer.md  database-architect.md  design-lead.md  devops-engineer.md  devops-lead.md  documentation-writer.md  frontend-developer.md  frontend-lead.md  game-designer.md  game-director.md  gameplay-programmer.md  godot-developer.md  launch-lead.md  level-designer.md  mobile-developer.md  mobile-lead.md  narrative-director.md  payments-specialist.md  performance-engineer.md  product-director.md  qa-lead.md  research-analyst.md  security-lead.md  studio-brain.md  tech-lead.md  tools-programmer.md  track-architect.md  unity-developer.md  unreal-developer.md
.claude/commands/: audit.md  concept-review.md  dashboard.md  debug.md  deploy.md  docs.md  launch.md  new-project.md  new-track.md  onboard.md  plan.md  refactor.md  reflect.md  research.md  review.md  spec.md  sprint-end.md  sprint-plan.md  sprint-start.md  start.md  status.md  test.md  wiki-query.md  wiki-update.md
.claude/rules/: api.md  common.md  game-dev.md  privacy.md  python.md  react.md  testing.md  typescript.md
.github/workflows/: ci.yml
docs/: audit-2026-04-08.md
pith/: llm.py  main.py
scripts/: generate_keypair.py  sign_license.py
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: test_config.py  test_export_csv.py  test_ingest_concurrency.py  test_ingest_path.py  test_init_overwrite.py  test_license.py  test_scheduler_permissions.py  test_schema.py
vault/: devlogs.md  kolibri-proposal.md  sample.md
wiki/: dashboard.md  log.md
(+62 files in other folders)
