[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pithhq"
version = "0.1.0"
description = "Your knowledge, compiled."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{ name = "PITH", email = "hello@pithhq.com" }]
keywords = ["knowledge", "wiki", "documents", "ingest"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pdfplumber>=0.11",
    "pytesseract>=0.3",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "python-pptx>=0.6",
    "gitpython>=3.1",
    "fpdf2>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
    "pyinstaller>=6.0",
]

[project.scripts]
pith = "pith.cli:app"

[project.urls]
Homepage = "https://pithhq.com"
Repository = "https://github.com/pithhq/pithhq"

[tool.setuptools.packages.find]
include = ["pith*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
