[package]
name = "pith"
version = "0.1.0"
edition = "2021"
description = "PITH — Your knowledge, compiled."

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
